--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,9 @@ body {
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
+.controls__colors .controls__color:active {
+  transform: scale(0.97);
+}
 .controls .controls__range {
   margin-bottom: 20px;
 }
